결제대기 사유 상세추가
결제대기 사유 상세추가

--- a/정기상품__결제대기_상태안내_.html
+++ b/정기상품__결제대기_상태안내_.html
@@ -25,78 +25,300 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u231" class="ax_default image">
-        <img id="u231_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u126.png"/>
+      <div id="u260" class="ax_default image">
+        <img id="u260_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u126.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u232" class="ax_default image">
-        <img id="u232_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u142.png"/>
+      <div id="u261" class="ax_default image">
+        <img id="u261_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u142.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u233" class="ax_default box_1">
-        <div id="u233_div" class=""></div>
+      <div id="u262" class="ax_default box_1">
+        <div id="u262_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u234" class="ax_default box_1">
-        <img id="u234_img" class="img " src="images/정기상품__결제대기_상태안내_/u234.png"/>
-        <div id="u234_text" class="text ">
+      <div id="u263" class="ax_default box_1">
+        <img id="u263_img" class="img " src="images/정기상품__결제대기_상태안내_/u263.png"/>
+        <div id="u263_text" class="text ">
           <p><span><br></span></p><p><span>-</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u235" class="ax_default box_1">
-        <img id="u235_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u153.png"/>
+      <div id="u264" class="ax_default box_1">
+        <img id="u264_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u153.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u236" class="ax_default heading_1">
-        <div id="u236_div" class=""></div>
-        <div id="u236_text" class="text ">
+      <div id="u265" class="ax_default heading_1">
+        <div id="u265_div" class=""></div>
+        <div id="u265_text" class="text ">
           <p><span>듣기+ 스마트폰 저장</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u237" class="ax_default box_1">
-        <img id="u237_img" class="img " src="images/정기상품__결제대기_상태안내_/u237.png"/>
+      <div id="u266" class="ax_default box_1">
+        <img id="u266_img" class="img " src="images/정기상품__결제대기_상태안내_/u266.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u238" class="ax_default paragraph">
-        <div id="u238_div" class=""></div>
-        <div id="u238_text" class="text ">
+      <div id="u267" class="ax_default paragraph">
+        <div id="u267_div" class=""></div>
+        <div id="u267_text" class="text ">
           <p><span>현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u239" class="ax_default box_1">
-        <div id="u239_div" class=""></div>
+      <div id="u268" class="ax_default box_1">
+        <div id="u268_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u240" class="ax_default box_1">
-        <img id="u240_img" class="img " src="images/정기상품__결제대기_상태안내_/u240.png"/>
+      <div id="u269" class="ax_default box_1">
+        <img id="u269_img" class="img " src="images/정기상품__결제대기_상태안내_/u269.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u241" class="ax_default box_1">
-        <div id="u241_div" class=""></div>
-        <div id="u241_text" class="text ">
+      <div id="u270" class="ax_default box_1">
+        <div id="u270_div" class=""></div>
+        <div id="u270_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u241_ann" class="annotation"></div>
+      <div id="u270_ann" class="annotation"></div>
 
       <!-- Unnamed (Image) -->
-      <div id="u242" class="ax_default image">
-        <img id="u242_img" class="img " src="images/정기상품__결제대기_상태안내_/u242.png"/>
+      <div id="u271" class="ax_default image">
+        <img id="u271_img" class="img " src="images/정기상품__결제대기_상태안내_/u271.png"/>
+      </div>
+
+      <!-- Unnamed (자동결제 실패사유) -->
+
+      <!-- Unnamed (Table) -->
+      <div id="u273" class="ax_default table">
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u274" class="ax_default table_cell">
+          <img id="u274_img" class="img " src="images/정기상품__결제대기_상태안내__2/u233.png"/>
+          <div id="u274_text" class="text ">
+            <p><span>결제실패 코드</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u275" class="ax_default table_cell">
+          <img id="u275_img" class="img " src="images/정기상품__결제대기_상태안내__2/u234.png"/>
+          <div id="u275_text" class="text ">
+            <p><span>빌링시스템 문구</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u276" class="ax_default table_cell">
+          <img id="u276_img" class="img " src="images/정기상품__결제대기_상태안내__2/u235.png"/>
+          <div id="u276_text" class="text ">
+            <p><span>프론트 사유 표기 문구</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u277" class="ax_default table_cell">
+          <img id="u277_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u277_text" class="text ">
+            <p><span>POQ 결제 실패[[414] </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u278" class="ax_default table_cell">
+          <img id="u278_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u278_text" class="text ">
+            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u279" class="ax_default table_cell">
+          <img id="u279_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u279_text" class="text ">
+            <p><span>통신요금 미납</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u280" class="ax_default table_cell">
+          <img id="u280_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u280_text" class="text ">
+            <p><span>POQ 결제 실패[[1002]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u281" class="ax_default table_cell">
+          <img id="u281_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u281_text" class="text ">
+            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u282" class="ax_default table_cell">
+          <img id="u282_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u282_text" class="text ">
+            <p><span>가입자 주민번호 오류</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u283" class="ax_default table_cell">
+          <img id="u283_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u283_text" class="text ">
+            <p><span>POQ 결제 실패[[1003]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u284" class="ax_default table_cell">
+          <img id="u284_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u284_text" class="text ">
+            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u285" class="ax_default table_cell">
+          <img id="u285_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u285_text" class="text ">
+            <p><span>분실 및 사용정지 휴대폰</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u286" class="ax_default table_cell">
+          <img id="u286_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u286_text" class="text ">
+            <p><span>POQ 결제 실패[[1006]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u287" class="ax_default table_cell">
+          <img id="u287_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u287_text" class="text ">
+            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u288" class="ax_default table_cell">
+          <img id="u288_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u288_text" class="text ">
+            <p><span>요금 미납</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u289" class="ax_default table_cell">
+          <img id="u289_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u289_text" class="text ">
+            <p><span>POQ 결제 실패[[1018]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u290" class="ax_default table_cell">
+          <img id="u290_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u290_text" class="text ">
+            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u291" class="ax_default table_cell">
+          <img id="u291_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u291_text" class="text ">
+            <p><span>소액결제 차단된 휴대폰 번호</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u292" class="ax_default table_cell">
+          <img id="u292_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u292_text" class="text ">
+            <p><span>POQ 결제 실패[[1025]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u293" class="ax_default table_cell">
+          <img id="u293_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u293_text" class="text ">
+            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u294" class="ax_default table_cell">
+          <img id="u294_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u294_text" class="text ">
+            <p><span>당월 한도 초과</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u295" class="ax_default table_cell">
+          <img id="u295_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u295_text" class="text ">
+            <p><span>POQ 결제 실패[[1032]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u296" class="ax_default table_cell">
+          <img id="u296_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u296_text" class="text ">
+            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u297" class="ax_default table_cell">
+          <img id="u297_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u297_text" class="text ">
+            <p><span>소액결제 차단된 휴대폰 번호</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u298" class="ax_default table_cell">
+          <img id="u298_img" class="img " src="images/정기상품__결제대기_상태안내__2/u257.png"/>
+          <div id="u298_text" class="text ">
+            <p><span>POQ 결제 실패[[1071]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u299" class="ax_default table_cell">
+          <img id="u299_img" class="img " src="images/정기상품__결제대기_상태안내__2/u258.png"/>
+          <div id="u299_text" class="text ">
+            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u300" class="ax_default table_cell">
+          <img id="u300_img" class="img " src="images/정기상품__결제대기_상태안내__2/u259.png"/>
+          <div id="u300_text" class="text ">
+            <p><span>등록된 자동결제 정보 오류</span></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
