--- a/정기상품__결제대기_상태안내__1.html
+++ b/정기상품__결제대기_상태안내__1.html
@@ -25,80 +25,302 @@
     <div id="base" class="">
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u243" class="ax_default box_1">
-        <div id="u243_div" class=""></div>
+      <div id="u301" class="ax_default box_1">
+        <div id="u301_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u244" class="ax_default box_1">
-        <div id="u244_div" class=""></div>
-        <div id="u244_text" class="text ">
+      <div id="u302" class="ax_default box_1">
+        <div id="u302_div" class=""></div>
+        <div id="u302_text" class="text ">
           <p><span>Status Bar</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u245" class="ax_default line">
-        <img id="u245_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u199.png"/>
+      <div id="u303" class="ax_default line">
+        <img id="u303_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u199.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u246" class="ax_default heading_1">
-        <div id="u246_div" class=""></div>
-        <div id="u246_text" class="text ">
+      <div id="u304" class="ax_default heading_1">
+        <div id="u304_div" class=""></div>
+        <div id="u304_text" class="text ">
           <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u247" class="ax_default image">
-        <img id="u247_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u201.png"/>
+      <div id="u305" class="ax_default image">
+        <img id="u305_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u201.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u248" class="ax_default line">
-        <img id="u248_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u183.png"/>
+      <div id="u306" class="ax_default line">
+        <img id="u306_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u183.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u249" class="ax_default box_1">
-        <div id="u249_div" class=""></div>
+      <div id="u307" class="ax_default box_1">
+        <div id="u307_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u250" class="ax_default heading_1">
-        <div id="u250_div" class=""></div>
-        <div id="u250_text" class="text ">
+      <div id="u308" class="ax_default heading_1">
+        <div id="u308_div" class=""></div>
+        <div id="u308_text" class="text ">
           <p><span>[정기] MP3 30</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u251" class="ax_default heading_1">
-        <div id="u251_div" class=""></div>
-        <div id="u251_text" class="text ">
+      <div id="u309" class="ax_default heading_1">
+        <div id="u309_div" class=""></div>
+        <div id="u309_text" class="text ">
           <p><span>현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u252" class="ax_default box_1">
-        <div id="u252_div" class=""></div>
-        <div id="u252_text" class="text ">
+      <div id="u310" class="ax_default box_1">
+        <div id="u310_div" class=""></div>
+        <div id="u310_text" class="text ">
           <p><span style="font-family:'나눔고딕';font-weight:400;">정기 상품을 이용 중이나, 명의변경, 번호변경 등의 문제로 정기 상품의 결제가 정상적으로 이루어 지지 않았을 경우 </span><span style="font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';font-weight:600;text-decoration:underline;">현상태 및 사유 안내 추가</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u253" class="ax_default box_1">
-        <div id="u253_div" class=""></div>
-        <div id="u253_text" class="text ">
+      <div id="u311" class="ax_default box_1">
+        <div id="u311_div" class=""></div>
+        <div id="u311_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u253_ann" class="annotation"></div>
+      <div id="u311_ann" class="annotation"></div>
+
+      <!-- Unnamed (자동결제 실패사유) -->
+
+      <!-- Unnamed (Table) -->
+      <div id="u313" class="ax_default table">
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u314" class="ax_default table_cell">
+          <img id="u314_img" class="img " src="images/정기상품__결제대기_상태안내__2/u233.png"/>
+          <div id="u314_text" class="text ">
+            <p><span>결제실패 코드</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u315" class="ax_default table_cell">
+          <img id="u315_img" class="img " src="images/정기상품__결제대기_상태안내__2/u234.png"/>
+          <div id="u315_text" class="text ">
+            <p><span>빌링시스템 문구</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u316" class="ax_default table_cell">
+          <img id="u316_img" class="img " src="images/정기상품__결제대기_상태안내__2/u235.png"/>
+          <div id="u316_text" class="text ">
+            <p><span>프론트 사유 표기 문구</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u317" class="ax_default table_cell">
+          <img id="u317_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u317_text" class="text ">
+            <p><span>POQ 결제 실패[[414] </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u318" class="ax_default table_cell">
+          <img id="u318_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u318_text" class="text ">
+            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u319" class="ax_default table_cell">
+          <img id="u319_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u319_text" class="text ">
+            <p><span>통신요금 미납</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u320" class="ax_default table_cell">
+          <img id="u320_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u320_text" class="text ">
+            <p><span>POQ 결제 실패[[1002]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u321" class="ax_default table_cell">
+          <img id="u321_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u321_text" class="text ">
+            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u322" class="ax_default table_cell">
+          <img id="u322_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u322_text" class="text ">
+            <p><span>가입자 주민번호 오류</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u323" class="ax_default table_cell">
+          <img id="u323_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u323_text" class="text ">
+            <p><span>POQ 결제 실패[[1003]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u324" class="ax_default table_cell">
+          <img id="u324_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u324_text" class="text ">
+            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u325" class="ax_default table_cell">
+          <img id="u325_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u325_text" class="text ">
+            <p><span>분실 및 사용정지 휴대폰</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u326" class="ax_default table_cell">
+          <img id="u326_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u326_text" class="text ">
+            <p><span>POQ 결제 실패[[1006]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u327" class="ax_default table_cell">
+          <img id="u327_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u327_text" class="text ">
+            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u328" class="ax_default table_cell">
+          <img id="u328_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u328_text" class="text ">
+            <p><span>요금 미납</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u329" class="ax_default table_cell">
+          <img id="u329_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u329_text" class="text ">
+            <p><span>POQ 결제 실패[[1018]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u330" class="ax_default table_cell">
+          <img id="u330_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u330_text" class="text ">
+            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u331" class="ax_default table_cell">
+          <img id="u331_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u331_text" class="text ">
+            <p><span>소액결제 차단된 휴대폰 번호</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u332" class="ax_default table_cell">
+          <img id="u332_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u332_text" class="text ">
+            <p><span>POQ 결제 실패[[1025]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u333" class="ax_default table_cell">
+          <img id="u333_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u333_text" class="text ">
+            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u334" class="ax_default table_cell">
+          <img id="u334_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u334_text" class="text ">
+            <p><span>당월 한도 초과</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u335" class="ax_default table_cell">
+          <img id="u335_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u335_text" class="text ">
+            <p><span>POQ 결제 실패[[1032]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u336" class="ax_default table_cell">
+          <img id="u336_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u336_text" class="text ">
+            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u337" class="ax_default table_cell">
+          <img id="u337_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u337_text" class="text ">
+            <p><span>소액결제 차단된 휴대폰 번호</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u338" class="ax_default table_cell">
+          <img id="u338_img" class="img " src="images/정기상품__결제대기_상태안내__2/u257.png"/>
+          <div id="u338_text" class="text ">
+            <p><span>POQ 결제 실패[[1071]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u339" class="ax_default table_cell">
+          <img id="u339_img" class="img " src="images/정기상품__결제대기_상태안내__2/u258.png"/>
+          <div id="u339_text" class="text ">
+            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u340" class="ax_default table_cell">
+          <img id="u340_img" class="img " src="images/정기상품__결제대기_상태안내__2/u259.png"/>
+          <div id="u340_text" class="text ">
+            <p><span>등록된 자동결제 정보 오류</span></p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
