--- a/정기상품__결제대기_상태안내__2.html
+++ b/정기상품__결제대기_상태안내__2.html
@@ -171,6 +171,228 @@
 
       <!-- Unnamed (Rectangle) [footnote] -->
       <div id="u230_ann" class="annotation"></div>
+
+      <!-- Unnamed (자동결제 실패사유) -->
+
+      <!-- Unnamed (Table) -->
+      <div id="u232" class="ax_default table">
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u233" class="ax_default table_cell">
+          <img id="u233_img" class="img " src="images/정기상품__결제대기_상태안내__2/u233.png"/>
+          <div id="u233_text" class="text ">
+            <p><span>결제실패 코드</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u234" class="ax_default table_cell">
+          <img id="u234_img" class="img " src="images/정기상품__결제대기_상태안내__2/u234.png"/>
+          <div id="u234_text" class="text ">
+            <p><span>빌링시스템 문구</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u235" class="ax_default table_cell">
+          <img id="u235_img" class="img " src="images/정기상품__결제대기_상태안내__2/u235.png"/>
+          <div id="u235_text" class="text ">
+            <p><span>프론트 사유 표기 문구</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u236" class="ax_default table_cell">
+          <img id="u236_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u236_text" class="text ">
+            <p><span>POQ 결제 실패[[414] </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u237" class="ax_default table_cell">
+          <img id="u237_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u237_text" class="text ">
+            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u238" class="ax_default table_cell">
+          <img id="u238_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u238_text" class="text ">
+            <p><span>통신요금 미납</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u239" class="ax_default table_cell">
+          <img id="u239_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u239_text" class="text ">
+            <p><span>POQ 결제 실패[[1002]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u240" class="ax_default table_cell">
+          <img id="u240_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u240_text" class="text ">
+            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u241" class="ax_default table_cell">
+          <img id="u241_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u241_text" class="text ">
+            <p><span>가입자 주민번호 오류</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u242" class="ax_default table_cell">
+          <img id="u242_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u242_text" class="text ">
+            <p><span>POQ 결제 실패[[1003]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u243" class="ax_default table_cell">
+          <img id="u243_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u243_text" class="text ">
+            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u244" class="ax_default table_cell">
+          <img id="u244_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u244_text" class="text ">
+            <p><span>분실 및 사용정지 휴대폰</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u245" class="ax_default table_cell">
+          <img id="u245_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+          <div id="u245_text" class="text ">
+            <p><span>POQ 결제 실패[[1006]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u246" class="ax_default table_cell">
+          <img id="u246_img" class="img " src="images/정기상품__결제대기_상태안내__2/u237.png"/>
+          <div id="u246_text" class="text ">
+            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u247" class="ax_default table_cell">
+          <img id="u247_img" class="img " src="images/정기상품__결제대기_상태안내__2/u238.png"/>
+          <div id="u247_text" class="text ">
+            <p><span>요금 미납</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u248" class="ax_default table_cell">
+          <img id="u248_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u248_text" class="text ">
+            <p><span>POQ 결제 실패[[1018]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u249" class="ax_default table_cell">
+          <img id="u249_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u249_text" class="text ">
+            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u250" class="ax_default table_cell">
+          <img id="u250_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u250_text" class="text ">
+            <p><span>소액결제 차단된 휴대폰 번호</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u251" class="ax_default table_cell">
+          <img id="u251_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u251_text" class="text ">
+            <p><span>POQ 결제 실패[[1025]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u252" class="ax_default table_cell">
+          <img id="u252_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u252_text" class="text ">
+            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u253" class="ax_default table_cell">
+          <img id="u253_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u253_text" class="text ">
+            <p><span>당월 한도 초과</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u254" class="ax_default table_cell">
+          <img id="u254_img" class="img " src="images/정기상품__결제대기_상태안내__2/u242.png"/>
+          <div id="u254_text" class="text ">
+            <p><span>POQ 결제 실패[[1032]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u255" class="ax_default table_cell">
+          <img id="u255_img" class="img " src="images/정기상품__결제대기_상태안내__2/u243.png"/>
+          <div id="u255_text" class="text ">
+            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u256" class="ax_default table_cell">
+          <img id="u256_img" class="img " src="images/정기상품__결제대기_상태안내__2/u244.png"/>
+          <div id="u256_text" class="text ">
+            <p><span>소액결제 차단된 휴대폰 번호</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u257" class="ax_default table_cell">
+          <img id="u257_img" class="img " src="images/정기상품__결제대기_상태안내__2/u257.png"/>
+          <div id="u257_text" class="text ">
+            <p><span>POQ 결제 실패[[1071]</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u258" class="ax_default table_cell">
+          <img id="u258_img" class="img " src="images/정기상품__결제대기_상태안내__2/u258.png"/>
+          <div id="u258_text" class="text ">
+            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u259" class="ax_default table_cell">
+          <img id="u259_img" class="img " src="images/정기상품__결제대기_상태안내__2/u259.png"/>
+          <div id="u259_text" class="text ">
+            <p><span>등록된 자동결제 정보 오류</span></p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
